--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,2 +1,27 @@
 :root {
+  --light-background-color: #ffffff;
+  --light-text-color: #22343d;
+  --light-accordion-color: #e7e7e7;
+
+  // -------------Dark Theme----------------
+
+  --dark-background-color: #1f2e35;
+  --dark-text-color: #ffffff;
+  --dark-accordion-color: #474747;
+
+  // -------------Established Colors--------
+
+  --green-color: #02897a;
+  --blue-color: #4d8dff;
+  --purple-color: #740a76;
+  --red-color: #f03e3d;
+  --yellow-color: #ff9900;
+
+  --border-color: #dedede;
+
+  --background-color-for-sections: #f5f5f5;
+  --background-color-for-business: #ffefef;
+  --background-color-for-enterprise: #f2f6ff;
+  --background-color-for-socials: #edfffc;
+  --background-color-for-features: #f4f5f7;
 }
