--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -19,6 +19,9 @@
 
   --border-color: #dedede;
 
+  --form-color: #f5f5f5;
+  --form-border-color: #e8e8e8;
+
   --background-color-for-sections: #f5f5f5;
   --background-color-for-business: #ffefef;
   --background-color-for-enterprise: #f2f6ff;
