--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -18,6 +18,7 @@
   --yellow-color: #ff9900;
 
   --border-color: #dedede;
+  --border-color-for-mobile-form: #bcd0e5;
 
   --form-color: #f5f5f5;
   --form-border-color: #e8e8e8;
