--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -18,7 +18,7 @@ textarea {
   resize: none;
 }
 
-.link {
+a {
   color: inherit;
   text-decoration: none;
 }
@@ -35,5 +35,4 @@ label {
 
 .list {
   list-style-type: none;
-  color: inherit;
 }
