--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,6 +10,7 @@
   --dark-accordion-color: #474747;
 
   // -------------Established Colors--------
+  --logo-text-color: #173a56;
 
   --green-color: #02897a;
   --blue-color: #4d8dff;
