--- a/src/partials/footer/footer.html
+++ b/src/partials/footer/footer.html
@@ -31,37 +31,37 @@
     </ul>
 
     <div class="resource-field">
-      <h2 class="resource-field__label">Resource</h2>
-      <ul class="footer-nav list">
-        <li class="footer-nav__item">
-          <a class="footer-nav__link" href="">About Us</a>
+      <h2 class="footer-field__label">Resource</h2>
+      <ul class="resource-list list">
+        <li class="resource-list__item">
+          <a class="resource-list__link" href="">About Us</a>
         </li>
-        <li class="footer-nav__item">
-          <a class="footer-nav__link" href="">Blog</a>
+        <li class="resource-list__item">
+          <a class="resource-list__link" href="">Blog</a>
         </li>
-        <li class="footer-nav__item">
-          <a class="footer-nav__link" href="">Contact</a>
+        <li class="resource-list__item">
+          <a class="resource-list__link" href="">Contact</a>
         </li>
-        <li class="footer-nav__item">
-          <a class="footer-nav__link" href="">FAQ</a>
+        <li class="resource-list__item">
+          <a class="resource-list__link" href="">FAQ</a>
         </li>
       </ul>
     </div>
 
     <div class="legal-field">
-      <h2 class="legal-field__label">Legal Stuff</h2>
-      <ul class="footer-links list">
-        <li class="footer-links__item">
-          <a class="footer-links__link" href="">Disclaimer</a>
+      <h2 class="footer-field__label">Legal Stuff</h2>
+      <ul class="legal-list list">
+        <li class="legal-list__item">
+          <a class="legal-list__link" href="">Disclaimer</a>
         </li>
-        <li class="footer-links__item">
-          <a class="footer-links__link" href="">Financing</a>
+        <li class="legal-list__item">
+          <a class="legal-list__link" href="">Financing</a>
         </li>
-        <li class="footer-links__item">
-          <a class="footer-links__link" href="">Privacy Policy</a>
+        <li class="legal-list__item">
+          <a class="legal-list__link" href="">Privacy Policy</a>
         </li>
-        <li class="footer-links__item">
-          <a class="footer-links__link" href="">Terms of Service</a>
+        <li class="legal-list__item">
+          <a class="legal-list__link" href="">Terms of Service</a>
         </li>
       </ul>
     </div>
