--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -17,9 +17,10 @@
   --purple-color: #740a76;
   --red-color: #f03e3d;
   --yellow-color: #ff9900;
+  --white-color: #ffffff;
 
   --border-color: #dedede;
-  --border-color-for-mobile-form: #bcd0e5;
+  --color-for-mobile-form: #bcd0e5;
 
   --form-color: #f5f5f5;
   --form-border-color: #e8e8e8;
@@ -29,4 +30,9 @@
   --background-color-for-enterprise: #f2f6ff;
   --background-color-for-socials: #edfffc;
   --background-color-for-features: #f4f5f7;
+
+  //-----------------animation---------------
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --time-of-animation: 350ms;
 }
