--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -1,38 +1,45 @@
-<header>
-  <a href="#" class="logo">
-    <svg class="logo__icon logo__icon-header">
-      <use href="./images/sprite.svg#icon-logo"></use>
-    </svg>
-    <span class="logo__text">Product</span>
-  </a>
-  <button class="menu">
-    <!-- <svg>
-          <use href=""></use>
-        </svg> -->
-  </button>
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-list__item">
-        <a class="nav-list__link nav-list__link--active" href="">Product</a>
-      </li>
-      <li class="nav-list__item">
-        <a class="nav-list__link" href="">Pricing</a>
-      </li>
-      <li class="nav-list__item">
-        <a class="nav-list__link" href="">Customers</a>
-      </li>
-      <li class="nav-list__item">
-        <a class="nav-list__link" href="">Resources</a>
-      </li>
-    </ul>
-  </nav>
-  <div class="login-btn">
-    <button class="login-btn__log">Sign In</button>
-    <button class="login-btn__reg">Sign Up</button>
+<header class="header">
+  <div class="container wrapper">
+    <a href="#" class="logo">
+      <svg class="logo__icon logo__icon-header">
+        <use href="./images/sprite.svg#icon-logo"></use>
+      </svg>
+      <span class="logo__text">Product</span>
+    </a>
+    <div class="nav_menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-list__item">
+          <a class="nav-list__link nav-list__link--active" href="">Product</a>
+        </li>
+        <li class="nav-list__item">
+          <a class="nav-list__link" href="">Pricing</a>
+        </li>
+        <li class="nav-list__item">
+          <a class="nav-list__link" href="">Customers</a>
+        </li>
+        <li class="nav-list__item">
+          <a class="nav-list__link" href="">Resources</a>
+        </li>
+        <li class="nav-list__item">
+          <button class="login-btns login-btn__log">Sign In</button>
+        </li>
+        <li class="nav-list__item">
+          <button class="login-btns login-btn__reg">Sign Up</button>
+        </li>
+        <li class="nav-list__item">
+          <button class="theme__switcher theme__switcher-btn">
+            <svg class="toggle__theme toggle__theme-light">
+              <use href="./images/sprite.svg#icon-light-theme-btn"></use>
+            </svg>
+          </button>
+        </li>
+      </ul>
+    </nav>
   </div>
-  <button>
-    <!-- <svg>
-          <use href=""></use>
-        </svg> -->
-  </button>
+  </div>
 </header>
