--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container wrapper">
-    <a href="#" class="logo">
+    <a href="./index.html" class="logo">
       <svg class="logo__icon logo__icon-header">
         <use href="./images/sprite.svg#icon-logo"></use>
       </svg>
@@ -11,35 +11,33 @@
       <span></span>
       <span></span>
     </div>
-    <nav class="nav">
-      <ul class="nav-list">
-        <li class="nav-list__item">
-          <a class="nav-list__link nav-list__link--active" href="">Product</a>
-        </li>
-        <li class="nav-list__item">
-          <a class="nav-list__link" href="">Pricing</a>
-        </li>
-        <li class="nav-list__item">
-          <a class="nav-list__link" href="">Customers</a>
-        </li>
-        <li class="nav-list__item">
-          <a class="nav-list__link" href="">Resources</a>
-        </li>
-        <li class="nav-list__item">
-          <button class="login-btns login-btn__log">Sign In</button>
-        </li>
-        <li class="nav-list__item">
-          <button class="login-btns login-btn__reg">Sign Up</button>
-        </li>
-        <li class="nav-list__item">
-          <button class="theme__switcher theme__switcher-btn">
-            <svg class="toggle__theme toggle__theme-light">
-              <use href="./images/sprite.svg#icon-light-theme-btn"></use>
-            </svg>
-          </button>
-        </li>
-      </ul>
-    </nav>
+    <div class="navbar">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-list__item">
+            <a class="nav-list__link nav-list__link--active" href="./index.html">Product</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="./pricing-page.html">Pricing</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="./customer-page.html">Customers</a>
+          </li>
+          <li class="nav-list__item">
+            <a class="nav-list__link" href="./resources-page.html">Resources</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="login__btn">
+        <button class="login-btns login-btn__log">Sign In</button>
+        <button class="login-btns login-btn__reg">Sign Up</button>
+      </div>
+        <button class="theme__switcher theme__switcher-btn">
+          <svg class="toggle__theme toggle__theme-light">
+            <use href="./images/sprite.svg#icon-light-theme-btn"></use>
+          </svg>
+        </button>
+    </div>
   </div>
   </div>
 </header>
