--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -1,4 +1,3 @@
-
 .logo__icon-header {
   width: 40px;
   height: 36px;
@@ -31,12 +30,15 @@
   width: 100%;
   transition: transform 0.1s linear;
   background-color: var(--light-background-color);
+
+  @media screen and (max-width: 1109px) {
+    box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.25);
+  }
 }
 
 .header.hide-header {
   transform: translateY(-80px);
 }
-
 
 .navbar {
   display: flex;
@@ -90,8 +92,6 @@
     }
   }
 
-
-
   .nav-list__link {
     font-size: 16px;
     line-height: 1.75;
@@ -110,7 +110,6 @@
       padding: 10px 24px;
     }
   }
-
 }
 
 .login-btns {
@@ -119,7 +118,8 @@
   font-weight: 600;
   cursor: pointer;
 
-  @media screen and (max-width: 1109px) {}
+  @media screen and (max-width: 1109px) {
+  }
 }
 
 .login-btn__log {
@@ -154,7 +154,7 @@
   }
   @media screen and (max-width: 1109px) {
     margin-right: 0px;
-    }
+  }
 }
 
 .theme__switcher {
@@ -183,11 +183,10 @@
     transform: translate(-50%, -50%) rotate(180deg);
     width: 20px;
     height: 20px;
-    
   }
   @media screen and (max-width: 1109px) {
     margin-top: 15px;
-    }
+  }
 }
 
 //  бургер  меню
