--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -43,7 +43,6 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 0 15px;
 
   @media screen and (min-width: 411px) {
     width: 411px;
@@ -56,4 +55,9 @@ body {
   @media screen and (min-width: 1110px) {
     width: 1110px;
   }
+}
+
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
