--- a/src/sass/layout/header/_header.scss
+++ b/src/sass/layout/header/_header.scss
@@ -17,12 +17,11 @@
   flex-direction: row;
   flex-wrap: nowrap;
   color: var(--logo-text-color);
-  position: relative;
   height: 80px;
 }
 
 .header {
-  z-index: 3;
+  z-index: 21;
   position: fixed;
   align-items: center;
   left: 0;
@@ -49,29 +48,19 @@
     bottom: 100%;
     right: 0;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     background-color: var(--light-background-color);
     transition: all 0.2s;
     overflow: hidden;
-
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
     &.active-burger {
       transform: translateY(100%);
     }
   }
 }
 
-.navbar {
-  @media screen and (max-width: 1109px) {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100%;
-    background-color: #fff;
-    overflow: auto;
-    text-align: center;
-    justify-content: center;
-  }
-}
 
 .nav-list {
   @media screen and (max-width: 1109px) {
@@ -125,7 +114,7 @@
 .login-btn__log {
   border: 1px solid var(--border-color-for-mobile-form);
   background-color: var(--light-background-color);
-  padding: 8px 24px;
+  padding: 8px 25px;
   border: 1px solid var(--color-for-mobile-form);
   transition-property: all;
   transition-duration: 0.2s;
@@ -187,6 +176,7 @@
   }
   @media screen and (max-width: 1109px) {
     margin-top: 15px;
+    
   }
 }
 
