--- a/src/sass/components-pages/pricing-page/pricing.page.scss
+++ b/src/sass/components-pages/pricing-page/pricing.page.scss
@@ -1,4 +1,4 @@
-@import './components/price';
+@import './components/pricing';
 @import './components/enterprise';
 @import './components/features';
 @import './components/faq';
