--- a/src/sass/components-pages/product-page/components/_adv.scss
+++ b/src/sass/components-pages/product-page/components/_adv.scss
@@ -61,14 +61,15 @@
 
 .advertisement-pic-field__img {
   margin: 0 auto;
-  width: 351px;
-  height: 331px;
+  max-width: 351px;
 
   filter: drop-shadow(0px 4px 31px rgba(0, 0, 0, 0.15));
   border-radius: 5px;
 
   @media screen and (min-width: 1110px) {
+    margin-top: 4px;
     margin-right: 46px;
+    margin-bottom: 10px;
     filter: drop-shadow(0px 0px 32px rgba(0, 0, 0, 0.15));
   }
 }
