--- a/src/sass/components-pages/product-page/components/_hero.scss
+++ b/src/sass/components-pages/product-page/components/_hero.scss
@@ -16,12 +16,12 @@
 }
 .hero-container__pic {
   margin: 0 auto;
-  width: 338px;
-  height: 311px;
+  max-width: 338px;
+  max-height: 311px;
   margin-bottom: 11px;
   @media screen and (min-width: 1110px) {
-    width: 610px;
-    height: 555px;
+    max-width: 610px;
+    max-height: 555px;
     margin-bottom: 0;
   }
 }
